<resources>
    <string name="app_name">Gcm Chat</string>
    <string name="logout">Logout</string>
    <string name="error_enter_name">Enter full name</string>
    <string name="error_enter_email">Enter valid email</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_email">Enter email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter">ENTER</string>
    <string name="author_name">by Yusuf Abdullaev</string>
    <string name="author_url">www.androidclub.uz</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_new_chat">NewChatActivity</string>
    <string name="title_activity_correspondence">CorrespondenceActivity</string>
    <string name="add_cr">New Chat Room</string>
    <string name="title_activity_new_chat_room">NewChatRoomActivity</string>
    <string name="hint_cr_name">Enter Chat Room title</string>
    <string name="confirm">Confirm</string>
</resources>
